--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity
             android:name=".RoomsActivity"
+            android:theme="@style/Theme.DoAnMonHoc.NoActionBar"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -28,6 +29,7 @@
         </activity>
         <activity
             android:name=".DetailHotelActivity"
+            android:theme="@style/Theme.DoAnMonHoc.NoActionBar"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -35,7 +37,8 @@
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.DoAnMonHoc.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
